[gd_scene load_steps=20 format=2]

[ext_resource path="res://tux/tux.tscn" type="PackedScene" id=1]
[ext_resource path="res://enviorment/default/default.tscn" type="PackedScene" id=2]
[ext_resource path="res://main.gd" type="Script" id=3]
[ext_resource path="res://fonts/darkforest.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://score.gd" type="Script" id=5]
[ext_resource path="res://move_stuff.gd" type="Script" id=6]
[ext_resource path="res://audio/music/vitti_na_crozza.wav" type="AudioStream" id=7]

[sub_resource type="GDScript" id=1]
script/source = "extends Timer

"

[sub_resource type="GDScript" id=2]
script/source = "extends Timer

"

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="Animation" id=6]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=7]
size = 128
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 128
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 25
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="DynamicFont" id=11]
size = 64
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=12]
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Level" type="Node2D"]
script = ExtResource( 3 )
hat_rarity = 30

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.960784, 1, 0.909804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tux (RigidBody2D)" parent="." instance=ExtResource( 1 )]
position = Vector2( 196.5, 753.4 )
z_index = 5
jump_heights = [ 260.0, 400, 430.0, 600.0 ]
jump_times_to_peak = [ 0.3, 0.3, 0.3, 0.3 ]
jump_times_to_descend = [ 0.5, 0.35, 0.25, 0.2 ]

[node name="MovingStuff" type="Node2D" parent="."]
script = ExtResource( 6 )
speeds = [ 600.0, 750.0, 900.0, 1200.0 ]

[node name="Objects" type="Node2D" parent="MovingStuff"]
position = Vector2( 0, 768 )

[node name="DefaultEnviorment" parent="MovingStuff" instance=ExtResource( 2 )]
script = null

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0
autostart = true
script = SubResource( 1 )

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.056
autostart = true
script = SubResource( 2 )

[node name="GUI" type="Control" parent="."]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="MarginContainer" parent="GUI"]
margin_right = 1920.0
margin_bottom = 100.0
custom_constants/margin_right = 20
custom_constants/margin_top = 15
custom_constants/margin_left = 20
custom_constants/margin_bottom = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Top"]
margin_left = 20.0
margin_top = 15.0
margin_right = 1900.0
margin_bottom = 85.0

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/Top/VBoxContainer"]
margin_right = 1880.0
margin_bottom = 60.0
alignment = 2

[node name="Score" type="Label" parent="GUI/Top/VBoxContainer/HBoxContainer"]
margin_left = 1647.0
margin_right = 1880.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.345098, 0.345098, 0.345098, 0.529412 )
text = "Score: 00"
align = 2
script = ExtResource( 5 )

[node name="Hat" type="Label" parent="GUI/Top/VBoxContainer"]
visible = false
margin_top = 64.0
margin_right = 1880.0
margin_bottom = 124.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.345098, 0.345098, 0.345098, 0.529412 )
text = "Hat: 0.0"
align = 2

[node name="Hints" type="VBoxContainer" parent="GUI/Top"]
margin_left = 20.0
margin_top = 15.0
margin_right = 1900.0
margin_bottom = 85.0

[node name="HBoxContainder" type="HBoxContainer" parent="GUI/Top/Hints"]
margin_right = 1880.0
margin_bottom = 65.0
alignment = 1

[node name="CtrlR" type="Label" parent="GUI/Top/Hints/HBoxContainder"]
margin_left = 783.0
margin_right = 953.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.345098, 0.345098, 0.345098, 0.529412 )
text = "Quick Restart
(Ctrl E)"
align = 1
script = ExtResource( 5 )

[node name="VSeparator" type="VSeparator" parent="GUI/Top/Hints/HBoxContainder"]
margin_left = 957.0
margin_right = 977.0
margin_bottom = 65.0
custom_styles/separator = SubResource( 5 )
custom_constants/separation = 20

[node name="Esc" type="Label" parent="GUI/Top/Hints/HBoxContainder"]
margin_left = 981.0
margin_right = 1097.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.345098, 0.345098, 0.345098, 0.529412 )
text = "Main Menu
(ESC)"
align = 1
script = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="GUI/Top/Hints/HBoxContainder"]
autoplay = "fadeout"
anims/fadeout = SubResource( 6 )

[node name="DeathMenu" type="MarginContainer" parent="GUI"]
visible = false
anchor_left = 24.0
anchor_right = 24.0
margin_left = -960.0
margin_right = 960.0
margin_bottom = 884.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="Label" parent="GUI/DeathMenu"]
margin_top = 378.0
margin_right = 1920.0
margin_bottom = 506.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.345098, 0.345098, 0.345098, 0 )
align = 1
valign = 1

[node name="LinkButton" type="LinkButton" parent="GUI/DeathMenu/Retry"]
margin_left = 803.0
margin_right = 1108.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.345098, 0.345098, 0.345098, 0.529412 )
custom_colors/font_color_hover = Color( 0.345098, 0.345098, 0.345098, 1 )
action_mode = 0
text = "Retry"
underline = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="LinkButton" parent="GUI/DeathMenu/Retry"]
margin_left = 832.0
margin_top = 102.0
margin_right = 1091.0
margin_bottom = 136.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.345098, 0.345098, 0.345098, 0.529412 )
custom_colors/font_color_hover = Color( 0.345098, 0.345098, 0.345098, 1 )
custom_constants/underline_spacing = 4
action_mode = 0
text = "By Il Mastro Stefanuzzo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="GUI/DeathMenu"]
anims/fadein = SubResource( 10 )

[node name="HatHint" type="MarginContainer" parent="GUI"]
visible = false
margin_left = 40.0
margin_right = 1920.0
margin_bottom = 884.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hint" type="Label" parent="GUI/HatHint"]
margin_top = 343.0
margin_right = 1880.0
margin_bottom = 541.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.345098, 0.345098, 0.345098, 0.529412 )
text = "Press SPACE
to stop flying
before timeout"
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="GUI/HatHint"]
anims/fadeinout = SubResource( 12 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0
autoplay = true

[connection signal="timeout" from="Timer" to="Tux (RigidBody2D)" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="MovingStuff" method="_on_Timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="GUI/Top/VBoxContainer/HBoxContainer/Score" method="_on_ScoreTimer_timeout"]
[connection signal="pressed" from="GUI/DeathMenu/Retry/LinkButton" to="." method="_on_LinkButton_pressed"]
[connection signal="pressed" from="GUI/DeathMenu/Retry/Credits" to="." method="_on_Credits_pressed"]
